load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["sacloud-tftestsuite.go"],
    importpath = "github.com/lifememoryteam/sacloud-tftestsuite/cmd/sacloud-tftestsuite",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_hashicorp_hcl_v2//:go_default_library",
        "@com_github_hashicorp_hcl_v2//gohcl:go_default_library",
        "@com_github_hashicorp_hcl_v2//hclparse:go_default_library",
        "@com_github_sacloud_libsacloud_v2//sacloud:go_default_library",
        "@com_github_sacloud_libsacloud_v2//sacloud/search:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_binary(
    name = "sacloud-tftestsuite",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
